# mohu

./: .editorconfig  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRATE_MAP.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  cliff.toml  clippy.toml  deny.toml  pyproject.toml  release.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: README.md
benches/: ndarray_ops.rs
crates/mohu-array/: Cargo.toml
crates/mohu-array/src/: lib.rs
crates/mohu-buffer/: Cargo.toml
crates/mohu-buffer/examples/: alloc_and_pool.rs  buffer_basics.rs
crates/mohu-buffer/src/: alloc.rs  buffer.rs  lib.rs  ops.rs  pool.rs  view.rs
crates/mohu-compute/: Cargo.toml
crates/mohu-compute/benches/: kernels.rs
crates/mohu-compute/tests/: kernels.rs
crates/mohu-core/: Cargo.toml
crates/mohu-core/src/: lib.rs
crates/mohu-core/tests/: array.rs
crates/mohu-dtype/: Cargo.toml
crates/mohu-dtype/examples/: dtype_basics.rs  type_promotion.rs
crates/mohu-dtype/src/: cast.rs  compat.rs  dlpack.rs  dtype.rs  finfo.rs  iinfo.rs  lib.rs  macros.rs  promote.rs  scalar.rs
crates/mohu-error/: Cargo.toml
crates/mohu-error/src/: error.rs  lib.rs  macros.rs  reporter.rs
crates/mohu-io/: Cargo.toml
crates/mohu-io/src/: lib.rs
crates/mohu-io/tests/: npy.rs
crates/mohu-linalg/: Cargo.toml
crates/mohu-ops/: Cargo.toml
crates/mohu-ops/benches/: broadcast.rs
crates/mohu-ops/src/: lib.rs
crates/mohu-ops/tests/: broadcast.rs
crates/mohu-py/: Cargo.toml
crates/mohu-stats/: Cargo.toml
crates/mohu-stats/src/: lib.rs
crates/mohu-stats/tests/: descriptive.rs
docs/: book.toml
docs/design/: 001-dtype-system.md  002-memory-layout.md
docs/rfcs/: 0001-array-api.md
docs/src/: SUMMARY.md  introduction.md
examples/: array_basics.rs  io_npy.rs  linalg_matmul.rs
python/mohu/: __init__.py
python/tests/: test_smoke.py
scripts/: build-wheel.sh  check-msrv.sh  gen-changelog.sh
tests/: integration.rs
