[package]
name        = "mohu-core"
description = "Re-export facade — depends on mohu-dtype, mohu-buffer, and mohu-array for convenience"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
mohu-error.workspace  = true
mohu-dtype.workspace  = true
mohu-buffer.workspace = true
mohu-array.workspace  = true
