[package]
name        = "mohu-error"
description = "Shared error types for mohu — zero-dependency foundation used by every crate"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
thiserror.workspace = true
