[package]
name        = "mohu-py"
description = "Python bindings for mohu — zero-copy NumPy interop via PyO3"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true

[lib]
name       = "mohu"
crate-type = ["cdylib"]

[dependencies]
mohu-error.workspace    = true
mohu-core.workspace     = true
mohu-compute.workspace  = true
mohu-ops.workspace      = true
pyo3.workspace          = true
numpy.workspace         = true
thiserror.workspace     = true

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6" }

[features]
default = ["full"]
full    = ["linalg", "stats", "io"]
linalg  = ["dep:mohu-linalg"]
stats   = ["dep:mohu-stats"]
io      = ["dep:mohu-io"]

[dependencies.mohu-linalg]
workspace = true
optional  = true

[dependencies.mohu-stats]
workspace = true
optional  = true

[dependencies.mohu-io]
workspace = true
optional  = true
